syntax = "proto3";

option csharp_namespace = "ExchangeRatesAgainstTheDollar.Grpc.Protos";

service ExchangeRateService {
	rpc GetTheExchangeRate (GetTheExchangeRateRequest) returns (ExchangeRateModel);
}

message GetTheExchangeRateRequest {
    string currencyCode = 1;
}

message ExchangeRateModel {
	string currencyCode = 1;

    // Whole units part of the amount
    int64 units = 2;

    // Nano units of the amount (10^-9)
    // Must be same sign as units
    sfixed32 nanos = 3;
}
